Implement authorizations endpoint
